prod/apps/matrix/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  annotations:
    downscaler/uptime: "Mon-Sun 07:00-22:00 Europe/Berlin"
